--- a/components/popupDelete/style.scss
+++ b/components/popupDelete/style.scss
@@ -34,38 +34,24 @@
                     cursor: pointer;
                 }
             }
-            .form{
-                margin: 40px auto;
-                input{
-                    display: block;
-                    width: 90%;
-                    margin: auto;
+            .title{
+                padding: 20px 20px 0 20px ;
+            }
+            .btn{
+                display: flex;
+                justify-content: center;
+                button{
+                    width: 150px;
+                    margin: 10px;
+                    padding: 8px;
+                    color: #fff;
+                    border: none;
                 }
-                input[type=text], input[type=password]{
-                    margin: 20px auto;
-                    padding: 15px;
-                    font-size: 16px;
-                    outline: none;
-                    border-radius: 5px;
-                    border: 1px solid #cccccc;
+                button:nth-child(1){
+                    background: #ffc107;
                 }
-                .button{
-                    background-color: #28a745;
-                    width: 90%;
-                    margin: auto;
-                    color:#fff;
-                    margin: 25px auto;
-                    padding: 15px;
-                    font-size: 16px;
-                    outline: none;
-                    border-radius: 5px;
-                    cursor: pointer;
-                    text-align: center;
-                    &:hover{
-                        box-shadow: -1px -1px 4px -1px rgba(0, 0, 0, 0.75);
-                        background-color: #28a745;
-                        transition: all .5s;
-                    }
+                button:nth-child(2){
+                    background: #28a745;
                 }
             }
         }
