--- a/components/popupAdd/style.scss
+++ b/components/popupAdd/style.scss
@@ -41,8 +41,14 @@
                     width: 90%;
                     margin: auto;
                 }
+                input[type=text]{
+                    margin: 20px auto 5px auto;
+                }
+                input[type=password]{
+                    margin: 5px auto 5px auto;
+                }
                 input[type=text], input[type=password]{
-                    margin: 20px auto;
+                    // margin: 20px auto;
                     padding: 15px;
                     font-size: 16px;
                     outline: none;
