--- a/components/dashboard/header/style.scss
+++ b/components/dashboard/header/style.scss
@@ -14,6 +14,7 @@
         span{
             a{
                 color: black;
+                text-decoration: none;
             }
         }
         cursor: pointer;
