--- a/components/popupDelete/style.scss
+++ b/components/popupDelete/style.scss
@@ -46,6 +46,7 @@
                     padding: 8px;
                     color: #fff;
                     border: none;
+                    outline: none;
                 }
                 button:nth-child(1){
                     background: #ffc107;
